docs: 优化 Java 核心知识文档